end secction preparation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Cooking: 5 minutes</li>
       </ul>
     </div>
-    <div class="ingrdients">
+    <div class="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>2-3 large eggs</li>
