--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div class="preparation">
       <h3>Preparation time</h3>
       <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+        <li><span>Total: </span>Approximately 10 minutes</li>
+        <li><span>Preparation: </span>5 minutes</li>
+        <li><span>Cooking: </span>5 minutes</li>
       </ul>
     </div>
     <div class="ingredients">
@@ -84,7 +84,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Jeissoncar97">Jeisson Cardenas</a>.
+    Coded by <a href="https://github.com/Jeissoncar97" target="_blank">Jeisson Cardenas</a>.
   </div>
 </body>
 
